--- a/teste.html
+++ b/teste.html
@@ -11,29 +11,29 @@
     <div class="calcu">
         <h3>calculo</h3>
         <div id="operacao">
-            <div id="prvious-operation"></div>
+            <div id="previous-operation"></div>
             <div id="current-operation"></div>
         </div>
         <div class="button_conteiner">
             <button>CE</button>
             <button>C</button>
-            <BUtton>DEL</BUtton>
-            <BUtton>/</BUtton>
-            <BUtton class="numbe">7</BUtton>
-            <BUtton class="numbe">8</BUtton>
-            <BUtton class="numbe">9</BUtton>
-            <BUtton>*</BUtton>
-            <BUtton class="numbe">4</BUtton>
-            <BUtton class="numbe">5</BUtton>
-            <BUtton class="numbe">6</BUtton>
-            <BUtton>-</BUtton>
-            <BUtton class="mumbe">1</BUtton>
-            <BUtton class="numbe">2</BUtton>
-            <BUtton class="numbe">3</BUtton>
-            <BUtton>+</BUtton>
-            <BUtton class="numbe">0</BUtton>
-            <BUtton>.</BUtton>
-            <BUtton class="igual">=</BUtton>
+            <button>DEL</button>
+            <button>/</button>
+            <button class="numbe">7</button>
+            <button class="numbe">8</button>
+            <button class="numbe">9</button>
+            <button>*</BUtton>
+            <button class="numbe">4</button>
+            <button class="numbe">5</button>
+            <button class="numbe">6</button>
+            <button>-</BUtton>
+            <button class="mumbe">1</button>
+            <button class="numbe">2</button>
+            <button class="numbe">3</button>
+            <button>+</BUtton>
+            <button class="numbe">0</button>
+            <button>.</BUtton>
+            <button class="igual">=</button>
         </div>
     </div>
 </body>
