--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +7,14 @@
 </head>
 <body>
    <form>
-    <h1>você JOGA?</h1>
+    <h1>você JOGA?wer</h1>
     <input type="radio" name="respota" value="errada">sim
     <input type="radio" name="respota" value="correta">nao
     <input type="radio" name="respota" value="errada">talvez
     <input type="radio" name="respota" value="errada">nao qr
-    <button type="button" onclick="funcaorespota()">reponder</button>
-</form>
-<script src="java.js"></script>
+    <button type="button" onclick="funcaoresposta()">reponder</button>
+    <p id="retorno"></p>
+    <script src="java.js"></script>
+   </form>
 </body>
 </html>
