--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <header class="cabe">
+        <img src="img/logo.png" class="logo">
+        <h1 class="name">Cinematica</h1>
+    </header>
+    <main class="meio">
+        <h2>Cinemática:<h2> 
+        <h3>entenda tudo sobre esse tema!</h3>
+        <div class="centro">
+            A cinemática é uma área da Física que estuda o comportamento do movimento dos corpos. Confira conceitos, fórmulas e exemplos para dominar esse assunto!
+            <br>
+            <br>
+            Se observarmos as placas de ruas e estradas, algumas delas informam a velocidade com que os veículos devem trafegar nas vias. Mas como essa indicação é calculada?
+            <br>
+            <br>
+            Além da velocidade, tempo de corrida e espaço percorrido são outros dois termos muito comuns quando falamos em trânsito e também em pistas de atividades esportivas. Mas você sabe como obter os valores dessas variáveis?
+            <br>
+            <br>
+            Responderemos para você as questões que envolvem o assunto neste artigo, que apresenta um resumo da área da Física conhecida como cinemática, muito cobrada no Enem e vestibulares. Acompanhe a leitura!
+        </div>
+    </main>
+    <footer class="roda">
+
+    </footer>
    <form>
     <h1>você JOGA?wer</h1>
     <input type="radio" name="respota" value="errada">sim
