--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
             Seja a trajetória de pequenas partículas ou até mesmo as órbitas planetárias, todo movimento macroscópico pode ser descrito a partir de equações de movimento. Essas equações relacionam grandezas como posição, velocidade e aceleração com a passagem do tempo. Para entendê-las, entretanto, é necessário que conheçamos alguns conceitos simples, mas indispensáveis para entendermos o movimento dos corpos."</h3>
             <h2 class="under">Cinemática</h2><h3>Essa área de estudos da Física permite que o movimento seja equacionado, dessa forma, é possível prever a posição, a velocidade ou quaisquer outros parâmetros do movimento de um móvel em instantes posteriores ao presente.</h3>  
             <br>
-            <img src="img/img1.jpg"
-            onMouseover="this.src= 'img/img2.jpg' "
-            onMouseout="this.src= 'img/img1.jpg'" name="imagem" width="45%" height="250px">
-            <br>
             <h2 class="under">Vamos conhecer alguns dos conceitos que são fundamentais para o estudo da cinemática.</h2>
             </div>
             <h2 class="under">→ Referencial</h2>
@@ -47,15 +43,29 @@
             <h3>Deslocamento, diferentemente de espaço percorrido, é uma grandeza vetorial, pois apresenta módulo, direção e sentido. O deslocamento é a diferença entre as posições final e inicial de um movimento. Em uma trajetória fechada, o deslocamento é nulo.</h3>
             <h6>fonte: <a href="https://brasilescola.uol.com.br/fisica/introducao-cinematica.htm">BrasilEscola</a></h6>
         </div>
+        <div class="enter">
+            <div class="partefundo">
+                <h1 class="under">
+                <p class="fundofrase">Que comece o desafio!</p>
+                </h1><br>
+                <br>
+                <br><button class="butao"><a href="execicio.html">Execicio</a></button>
+            </div>
+        </div>
     </main>
     <aside class="lado">
-        <div class="partefundo">
-            <h1 class="under">
-            <p class="fundofrase">Que comece o desafio!</p>
-            </h1><br>
-            <br>
-            <br><button class="butao"><a href="execicio.html">Execicio</a></button>
-        </div>
+        <img src="img/referencial.gif" height="410px" width="500px">
+        <br>
+        <img src="img/img1.jpg"
+        onMouseover="this.src= 'img/img2.jpg' "
+        onMouseout="this.src= 'img/img1.jpg'" name="imagem" height="410px" width="500px">
+        <br>
+        <img src="img/dog.gif" height="410px" width="500px">
+        <br>
+        <img src="img/simp.gif" height="410px" width="500px">
+        <br>
+        <img src="img/sonic.gif" height="410px" width="500px">
+
     </aside>
     <footer class="roda">
 
