--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <body class="body_1" onload="inclui_nome()">
         <script src="java.js"></script>
         <header class="cabe">
-            <h3 id="marcacao_nome"></h3>
             <img src="img/logo.png" class="logo">
             <h1 class="name">Cinematica</h1>
         </header>
@@ -17,6 +16,7 @@
             <div class="centro">
                 <div class="centraliza">
                     <h1 class="under">Cinemática</h1>
+                    <h3 id="marcacao_nome"></h3>
                     <h2>entenda tudo sobre esse tema!</h2>
                     <br>
                     <h2 class="under">Introdução à cinemática</h2>
@@ -55,23 +55,45 @@
                 </div>
             </div>        
         </main>
+      <br>
         <aside class="lado">
-            <img src="img/referencial.gif" height="410px" width="500px">
+            <img src="img/referencial.gif" height="410px" width="400px">
             <br>
             <img src="img/img1.jpg"
             onMouseover="this.src= 'img/img2.jpg' "
-            onMouseout="this.src= 'img/img1.jpg'" name="imagem" height="410px" width="500px">
+            onMouseout="this.src= 'img/img1.jpg'" name="imagem" height="410px" width="370px">
             <br>
-            <img src="img/dog.gif" height="410px" width="500px">
+            <img src="img/dog.gif" height="410px" width="370px">
             <br>
-            <img src="img/simp.gif" height="410px" width="500px">
+            <img src="img/simp.gif" height="410px" width="370px">
             <br>
-            <img src="img/sonic.gif" height="410px" width="500px">
-
+            <img src="img/sonic.gif" height="410px" width="370px">
         </aside>
+        <br>
         <footer class="roda">
-            <h2>Nosso site de fisica, falando sobre Cinematica:</h2>
-            <h4>informacões tiradas de <h6>fonte: <a href="https://brasilescola.uol.com.br/fisica/introducao-cinematica.htm">BrasilEscola</a></h6></h4>
+        <footer class="main_footer container">        
+            <div class="content">            
+                <div class="colfooter">                
+                    <h4 class="titleFooter">Menu</h4>                
+                    <ul>                
+                    <li><a href="index.html" title="Página Inícial">Página Inícial</a></li>
+                    <li><a href="index.html" title="Sobre a Empresa">Sobre a Empresa</a></li>
+                    <li><a href="index.html" title="Fale Conosco">Fale Conosco</a></li>                
+                    </ul>                
+                </div>                        
+                <div class="colfooter">                
+                    <h4 class="titleFooter">Contato</h4>
+                    <p><i class="icon icon-mail"></i> contato@seusite.com.br</p>
+                    <p><i class="icon icon-phone"></i> 45 90000-0000</p>
+                    <p><i class="icon icon-whatsapp"></i> 45 90000-0000</p>                
+                </div>
+                <div class="colfooter">
+                    <h4 class="titleFooter">Redes Sociais</h4>
+                    <a href="#" class="redesocial"><span> <i class="icon icon-facebook"></i>/instagram</span></a>            
+                    <a href="#" class="redesocial"><span> <i class="icon icon-instagram"></i>/facebook</span></a>                                                  
+                </div>
+            </div>
+        </footer>
         </footer>
     </body>
 </html>
