--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <body class="body_1" onload="inclui_nome()">
         <script src="java.js"></script>
         <header class="cabe">
-            <img src="img/logo.png" class="logo">
+            <img src="
+           
+            onMouseover="this.src= 'img/img2.jpg' "
+            onMouseout="this.src= 'img/img1.jpg'" name="imagem" height="410px" width="370px" class="logo">
             <h1 class="name">Cinematica</h1>
         </header>
         <main class="meio">
@@ -56,19 +59,7 @@
             </div>        
         </main>
       <br>
-        <aside class="lado">
-            <img src="img/referencial.gif" height="410px" width="400px">
-            <br>
-            <img src="img/img1.jpg"
-            onMouseover="this.src= 'img/img2.jpg' "
-            onMouseout="this.src= 'img/img1.jpg'" name="imagem" height="410px" width="370px">
-            <br>
-            <img src="img/dog.gif" height="410px" width="370px">
-            <br>
-            <img src="img/simp.gif" height="410px" width="370px">
-            <br>
-            <img src="img/sonic.gif" height="410px" width="370px">
-        </aside>
+      
         <br>
         <footer class="roda">
         <footer class="main_footer container">        
