--- a/execicio.html
+++ b/execicio.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body_execicio">
     <header class="cabe">
-        <img src="img/logo.png" class="logo">
+        <a href="index.html"><img src="img/logo.png" class="logo"></a>
         <h1 class="name">Cinematica</h1>
     </header>
     <main class="meio">
