--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <body class="body_1" onload="inclui_nome()">
         <script src="java.js"></script>
         <header class="cabe">
-            <img src="
-           
-            onMouseover="this.src= 'img/img2.jpg' "
-            onMouseout="this.src= 'img/img1.jpg'" name="imagem" height="410px" width="370px" class="logo">
-            <h1 class="name">Cinematica</h1>
+            <img src="img/logo.png" class="logo">
+            <h1 class="name">Cinemática</h1>
         </header>
         <main class="meio">
             <div class="centro">
@@ -45,6 +42,11 @@
                     <br>
                     <h2 class="under">→ Deslocamento</h2>
                     <h3>Deslocamento, diferentemente de espaço percorrido, é uma grandeza vetorial, pois apresenta módulo, direção e sentido. O deslocamento é a diferença entre as posições final e inicial de um movimento. Em uma trajetória fechada, o deslocamento é nulo.</h3>
+                    <br>
+                    <img
+                    src="img/img1.jpg"
+                    onMouseover="this.src= 'img/img2.jpg' "
+                    onMouseout="this.src= 'img/img1.jpg'" name="imagem" height="410px" width="450px">
                     <h6>fonte: <a href="https://brasilescola.uol.com.br/fisica/introducao-cinematica.htm">BrasilEscola</a></h6>
                 </div>
             </div>
