--- a/execicio.html
+++ b/execicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>CINEMÁTICA</title>
 </head>
 <body class="body_execicio">
     <header class="cabe">
@@ -129,8 +129,8 @@
             <br>
             <h3>Um carro viaja de uma cidade para outra, percorrendo uma distância de 300 quilômetros em 4 horas. Qual é a velocidade média do carro?</h3>
             <br>
-            valor1: <input type="text" id="valo1" value="300"><br>
-            valor2: <input type="text" id="valo2" value="4"><br>
+            valor1: <input type="text" id="valo1" value="0"><br>
+            valor2: <input type="text" id="valo2" value="0"><br>
             <br>
             <div class="deitar">
                 <input type="button" value="somar" onclick="josefa()"><br>
