--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Document</title>
+        <title>CINEMÁTICA</title>
     </head>
     <body class="body_1" onload="inclui_nome()">
         <script src="java.js"></script>
