--- a/execicio.html
+++ b/execicio.html
@@ -16,6 +16,7 @@
             <script src="java.js"></script>
 
             <p id="marcacao_nome"></p>
+                <center><img src="img/formula.gif" width="250px"></center>
             <form>
                 <h2>Questão 1</h2>
                 <h3>Um carro percorre 240km em 3hrs. Qual é a velocidade média do carro?</h3>
@@ -119,12 +120,11 @@
                     }
                     else {
                         dividi.value = parseInt(valo1.value) / parseInt(valo2.value);
-                    }
-                    
+                    }    
                 }
         
             </script>
-            <h1>calculo de soma:</h1>
+            <h1>Calcule:</h1>
             <br>
             <h3>Um carro viaja de uma cidade para outra, percorrendo uma distância de 300 quilômetros em 4 horas. Qual é a velocidade média do carro?</h3>
             <br>
