--- a/execicio.html
+++ b/execicio.html
@@ -16,7 +16,7 @@
             <script src="java.js"></script>
 
             <p id="marcacao_nome"></p>
-                <center><img src="img/formula.gif" width="250px"></center>
+            <img src="img/formula.gif" class="formula" width="250px">
             <form>
                 <h2>Questão 1</h2>
                 <h3>Um carro percorre 240km em 3hrs. Qual é a velocidade média do carro?</h3>
