--- a/execicio.html
+++ b/execicio.html
@@ -16,7 +16,7 @@
             <script src="java.js"></script>
 
             <p id="marcacao_nome"></p>
-            <img src="img/formula.gif" class="formula" width="250px">
+           <center><img src="img/formula.gif" class="formula" width="250px"></center>
             <form>
                 <h2>Questão 1</h2>
                 <h3>Um carro percorre 240km em 3hrs. Qual é a velocidade média do carro?</h3>
@@ -45,9 +45,9 @@
                 <h2>Questão 4</h2>
                 <h3>Uma bicicleta percorre 15 quilôme em 45 minutos. Qual é a velocidade média da bicicleta?</h3>
                 <input type="radio" name="quest_4" value="errada">a)15 km/h <br>
-                <input type="radio" name="quest_4" value="correta">b)20 km/h <br>
+                <input type="radio" name="quest_4" value="errada">b)20 km/h <br>
                 <input type="radio" name="quest_4" value="errada">c)30 km/h<br>
-                <input type="radio" name="quest_4" value="errada">d)45 km/h<br>
+                <input type="radio" name="quest_4" value="correta">d) Nenhuma das alternativas.<br>
                 <p id="resp_correta_4" class="verde"></p><p id="resp_errada_4" class="vermelho"></p>
         
                 <h2>Questão 5</h2>
