--- a/execicio.html
+++ b/execicio.html
@@ -7,6 +7,7 @@
     <title>CINEMÁTICA</title>
 </head>
 <body class="body_execicio">
+    <!--cabaçaio-->
     <header class="cabe">
         <a href="index.html"><img src="img/logo.png" class="logo"></a>
         <h1 class="name">Cinematica</h1>
@@ -14,7 +15,7 @@
     <main class="meio">
         <div class="centro_2">
             <script src="java.js"></script>
-
+            <!--questoes de alternativas-->
             <p id="marcacao_nome"></p>
            <center><img src="img/formula.gif" class="formula" width="250px"></center>
             <form>
@@ -103,6 +104,7 @@
                 <br>
                 <br>
             </form>
+            <!--script da calculadora-->
             <script type="text/javascript">
                 function josefa(){
                     dividi.value = parseInt(valo1.value) + parseInt(valo2.value);
@@ -124,6 +126,7 @@
                 }
         
             </script>
+            <!--calculadora-->
             <h1>Calcule:</h1>
             <br>
             <h3>Um carro viaja de uma cidade para outra, percorrendo uma distância de 300 quilômetros em 4 horas. Qual é a velocidade média do carro?</h3>
@@ -141,6 +144,7 @@
             resultado: <input type="text" id="dividi" value="0">
             <br>
             <br>
+        <!--calculadora-->
             <form>
                 <h3>Um ciclista faz um passeio de bicicleta e cobre uma distância de 20 quilômetros em 1,5 horas. Qual é a sua velocidade média?</h3>
                 <script src="script.js"></script>
@@ -155,6 +159,7 @@
             <br>
 
             <form>
+                <!--calculadora-->
                 <h3>Um trem parte de uma estação e viaja a uma velocidade constante de 120 km/h por 2,5 horas. Qual é a distância total percorrida pelo trem durante esse tempo?</h3>               
                 a= <input type="text" id="vara" value="0"><br>
                 b= <input type="text" id="varb" value="0"><br>
@@ -166,7 +171,7 @@
         </div>
     </main>
     <br>
-    
+    <!--rodapé-->
     <br>
     <footer class="roda">
     <footer class="main_footer container">        
