--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     </head>
     <body class="body_1" onload="inclui_nome()">
         <script src="java.js"></script>
+        <!--cabeçario-->
         <header class="cabe">
             <img src="img/logo.png" class="logo">
             <h1 class="name">Cinemática</h1>
         </header>
         <main class="meio">
             <div class="centro">
+                <!--texto sobre cinematica-->
                 <div class="centraliza">
                     <h1 class="under">Cinemática</h1>
                     <h3 id="marcacao_nome"></h3>
@@ -54,6 +56,7 @@
                     <h6>fonte: <a href="https://brasilescola.uol.com.br/fisica/introducao-cinematica.htm">BrasilEscola</a></h6>
                 </div>
             </div>
+            <!--botao para ir para outra pagina-->
             <div class="enter">
                 <div class="partefundo">
                     <h1 class="under">
@@ -64,8 +67,8 @@
                 </div>
             </div>        
         </main>
-      <br>
-      
+        <br>
+        <!--rodape-->
         <br>
         <footer class="roda">
         <footer class="main_footer container">        
